correct some details

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ program and of the several activities. More details are described throughout thi
                              <div class="row schedule-item">
                                 <div class="col-md-5"><time>April 29-30, 2019</time></div>
                                 <div class="col-md-7">
-                                  <h4>Conference</h4>
+                                  <h4>Event</h4>
                                   <p> </p>
                                 </div>
                              </div>
