--- a/pages/calls/3mt.html
+++ b/pages/calls/3mt.html
@@ -163,9 +163,10 @@
                           <ul>
                             <li>Eligibility: any PhD student</li>
                             <li>
-                              Every participant is required to submit a 1 page summary of his
-                              PhD on googleform.
+                              Every participant is required to submit a 1 page (420-480 words) summary of his
+                              PhD .
                             </li>
+                            <li>The thesis subject should be related to the event topic</li>
                         </ul>
                         </p>
                         <p>
@@ -223,7 +224,7 @@
                            <div class="row schedule-item">
                               <div class="col-md-5"><time><h6>April 29-30, 2019</h6></time></div>
                               <div class="col-md-7">
-                                  <h6><b>Conference</b></h6>
+                                  <h6><b>Event</b></h6>
                                 <p> </p>
                               </div>
                            </div>
