--- a/pages/calls/papers.html
+++ b/pages/calls/papers.html
@@ -138,7 +138,7 @@
                       <p>
                           The first edition of deep learning IndabaX-Morocco will be held at
                           the Faculty of Sciences and Techniques of Mohammedia in April
-                          29-30, 2019. The workshop will offer a comprehensive technical
+                          29-30, 2019. The event will offer a comprehensive technical
                           program addressing recent developments in research for Artificial
                           intelligence. There will also be socials to facilitate networking,
                           discussion of different career opportunities in AI, and sharing of
@@ -274,7 +274,7 @@
                            <div class="row schedule-item">
                               <div class="col-md-5"><time><h6>April 29-30, 2019</h6></time></div>
                               <div class="col-md-7">
-                                  <h6><b>Conference</b></h6>
+                                  <h6><b>Event</b></h6>
                                 <p> </p>
                               </div>
                            </div>
