--- a/pages/calls/tutorials.html
+++ b/pages/calls/tutorials.html
@@ -135,7 +135,7 @@
                     <p>
                       Indaba X Morocco 2019 invites for tutorial proposals for
                       half-day (3 hours) on April 29, 2019. The tutorial program
-                      is intended to disseminate information to conference
+                      is intended to disseminate information to the event
                       attendees on the state-of-the-art of Deep Learning. Indaba
                       X Morocco aim to receive audiences from both academia and
                       industry. This should be taken into consideration in the
@@ -228,7 +228,7 @@
                            <div class="row schedule-item">
                               <div class="col-md-5"><time><h6>April 29-30, 2019</h6></time></div>
                               <div class="col-md-7">
-                                  <h6><b>Conference</b></h6>
+                                  <h6><b>Event</b></h6>
                                 <p> </p>
                               </div>
                            </div>
