--- a/pages/participate.html
+++ b/pages/participate.html
@@ -125,30 +125,96 @@
       <section id="awards">
         <div class="container wow fadeInUp">
           <div class="section-header">
-            <h2>Why should you participate at IndabaX-Morocco?</h2>
+            <h2>Why participate?</h2>
           </div>
-
-          <div class="section-content">
-            <ul>
-              <li>Networking with Moroccan AI community.</li>
-              <li>Meeting with AI experts including researchers and entrepreneurs.</li>
-              <li>Learn the basics or advanced topics of machine learning.</li>
-              <li>All participants will benefit from:
-                  <ul>
-                    <li>Free registration </li>
-                    <li>Certificate of participation</li>
-                  </ul>
-
-              </li>
-            </ul>
+          <div class="row">
+            <div class="col-lg-3">
+              <section id="schedule" class="section-with-bg">
+                <div class="container wow fadeInUp">
+                  <div class="section-header">
+                    <center>
+                      <h3>
+                        Free
+                      </h3>
+                    </center>
+                  </div>
+                  <div class="section-content">
+                    <center>
+                      <p>
+                        Register for FREE and get your certificate of
+                        participation
+                      </p>
+                    </center>
+                  </div>
+                </div>
+              </section>
+            </div>
+            <div class="col-lg-3">
+              <section id="schedule" class="section-with-bg">
+                <div class="container wow fadeInUp">
+                  <div class="section-header">
+                    <center>
+                      <h3>
+                        Network
+                      </h3>
+                    </center>
+                  </div>
+                  <div class="section-content">
+                    <center>
+                      <p>
+                        Network with Moroccan AI community
+                      </p>
+                    </center>
+                  </div>
+                </div>
+              </section>
+            </div>
+            <div class="col-lg-3">
+              <section id="schedule" class="section-with-bg">
+                <div class="container wow fadeInUp">
+                  <div class="section-header">
+                    <center>
+                      <h3>
+                        Meet
+                      </h3>
+                    </center>
+                  </div>
+                  <div class="section-content">
+                    <center>
+                      <p>
+                        Meet AI experts including researchers, engineers and
+                        entrepreneurs
+                      </p>
+                    </center>
+                  </div>
+                </div>
+              </section>
+            </div>
+            <div class="col-lg-3">
+              <section id="schedule" class="section-with-bg">
+                <div class="container wow fadeInUp">
+                  <div class="section-header">
+                    <center>
+                      <h3>
+                        Learn
+                      </h3>
+                    </center>
+                  </div>
+                  <div class="section-content">
+                    <center>
+                      <p>
+                        Learn the basics and advanced topics of Machine Learning
+                        and Deep Learning
+                      </p>
+                    </center>
+                  </div>
+                </div>
+              </section>
+            </div>
           </div>
         </div>
       </section>
-    </main>        
-
-
-
-
+    </main>
 
    <!--==========================
     Footer
