--- a/pages/event/Awards.html
+++ b/pages/event/Awards.html
@@ -119,7 +119,7 @@
               </section>
             </div>
             <div class="col-lg-4">
-              <section id="schedule" class="section-without-bg">
+              <section id="schedule" class="section-with-bg">
                 <div class="container wow fadeInUp">
                   <div class="section-header">
                     <center><h3>
