--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ program and of the several activities. More details are described throughout thi
     <!--==========================
       Sponsors Section
     ============================-->
-    <section id="sponsors" class="section-without-bg wow fadeInUp">
+    <section id="sponsors" class="section-with-bg wow fadeInUp">
 
       <div class="container">
         <div class="section-header">
