--- a/index.html
+++ b/index.html
@@ -247,34 +247,30 @@ program and of the several activities. More details are described throughout thi
       Sponsors Section
     ============================-->
     <section id="sponsors" class="section-with-bg wow fadeInUp">
-
-      <div class="container">
-        <div class="section-header">
-          <h2>Sponsors</h2>
+        <div class="container">
+          <div class="section-header">
+            <h2>Sponsors</h2>
+          </div>
+          <div class="row">
+            <div class="col-lg-4">
+              <div class="sponsor-logo">
+                <img src="img/sponsors/uh2c.png" class="img-fluid" alt="" />
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="sponsor-logo">
+                <img src="img/sponsors/indaba.jpg" class="img-fluid" alt="" />
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="sponsor-logo">
+                <img src="img/sponsors/cnrst.jpeg" class="img-fluid" alt="" />
+              </div>
+            </div>
+          </div>
         </div>
-
-        <div class="row no-gutters sponsors-wrap clearfix">
-
-          <div class="col-lg-3 col-md-4 col-xs-6">
-            <div class="sponsor-logo">
-              <img src="img/sponsors/uh2c.png" class="img-fluid" alt="">
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-xs-6">
-            <div class="sponsor-logo">
-              <img src="img/sponsors/indaba.jpg" class="img-fluid" alt="" >
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-xs-6">
-            <div class="sponsor-logo">
-              <img src="img/sponsors/cnrst.jpeg" class="img-fluid" alt="" >
-            </div>
-          </div>
-
-         
-
+      </section>
+    
         </div>
 
       </div>
