--- a/pages/event/Awards.html
+++ b/pages/event/Awards.html
@@ -174,14 +174,23 @@
           </div>
           <div class="col-sm-3">
             <h4>Contact Us</h4>
-            <p>
-              Department of Computer Science <br>
-              FST Mohammedia<br>
-              Morocco <br>
-            <strong>Phone:</strong> +212 672 07 91 41<br>
+            <div class="social-links">
+                <p>
+                  Department of Computer Science <br />
+                  FST Mohammedia<br />
+                  Morocco <br />
+                  <strong>Phone:</strong> +212 672 07 91 41<br />
 
-              <strong>Email:</strong> indabaXmorocco@gmail.com<br>
-            </p>
+                  <strong>Email:</strong> indabaXmorocco@gmail.com<br />
+                  <a href="https://twitter.com/indabaXmorocco" class="twitter"
+                    ><i class="fa fa-twitter"></i
+                  ></a>
+                  <!--<a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+                  <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
+                  <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
+                  <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>-->
+                </p>
+              </div>
             
           </div>
         </div>
