--- a/pages/program.html
+++ b/pages/program.html
@@ -95,9 +95,14 @@
         <div class="container wow fadeInUp">
           <div class="section-header">
             <h2>Program</h2>
-            <p>Here is our event schedule</p>
+            <p>We will be annoucing the program very soon</p>
+            <p>
+              Stay tuned on
+              <a href="https://twitter.com/indabaXmorocco" class="twitter"
+                >Twitter <i class="fa fa-twitter"></i
+              ></a>
+            </p>
           </div>
-  
           <ul class="nav nav-tabs" role="tablist">
             <li class="nav-item">
               <a class="nav-link active" href="#day-1" role="tab" data-toggle="tab">Day 1</a>
@@ -332,14 +337,23 @@
           </div>
           <div class="col-sm-3">
             <h4>Contact Us</h4>
-            <p>
-              Department of Computer Science <br>
-              FST Mohammedia<br>
-              Morocco <br>
-            <strong>Phone:</strong> +212 672 07 91 41<br>
+            <div class="social-links">
+                <p>
+                  Department of Computer Science <br />
+                  FST Mohammedia<br />
+                  Morocco <br />
+                  <strong>Phone:</strong> +212 672 07 91 41<br />
 
-              <strong>Email:</strong> indabaXmorocco@gmail.com<br>
-            </p>
+                  <strong>Email:</strong> indabaXmorocco@gmail.com<br />
+                  <a href="https://twitter.com/indabaXmorocco" class="twitter"
+                    ><i class="fa fa-twitter"></i
+                  ></a>
+                  <!--<a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+                  <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
+                  <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
+                  <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>-->
+                </p>
+              </div>
             
           </div>
         </div>
