--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ program and of the several activities. More details are described throughout thi
             </div>
             <div class="col-lg-4">
               <div class="sponsor-logo">
-                <img src="img/sponsors/cnrst.jpeg" class="img-fluid" alt="" />
+                <img src="img/sponsors/cnrst.png" class="img-fluid" alt="" />
               </div>
             </div>
           </div>
