--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ program and of the several activities. More details are described throughout thi
             </div>
             <div class="col-lg-4">
               <div class="sponsor-logo">
-                <img src="img/sponsors/indaba.jpg" class="img-fluid" alt="" />
+                <img src="img/sponsors/indaba-black.png" class="img-fluid" alt="" />
               </div>
             </div>
             <div class="col-lg-4">
