--- a/pages/sponsorship.html
+++ b/pages/sponsorship.html
@@ -136,8 +136,7 @@
                   <div class="section-content">
                     <p>
                       The Deep Learning IndabaX-Morocco 2019, is the first Deep Learning
-                      event in Morocco supported by the <a href="http://www.deeplearningindaba.com/indaba-2019.html"> 
-                        African Deep Learning Indaba</a>. It is a locally-organized
+                      event in Morocco supported by the <b>African Deep Learning Indaba</b>. It is a locally-organized
                       Indaba that aims to empower the community of Artificial
                       Intelligence in Morocco.
                     </p>
