--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ program and of the several activities. More details are described throughout thi
           <div class="row">
             <div class="col-lg-4">
               <div class="sponsor-logo">
-                <img src="img/sponsors/uh2c.png" class="img-fluid" alt="" />
+                <img src="img/sponsors/uh2c-fst.png" class="img-fluid" alt="" />
               </div>
             </div>
             <div class="col-lg-4">
