--- a/pages/contact.html
+++ b/pages/contact.html
@@ -118,7 +118,7 @@
               <div class="contact-phone">
                 <i class="ion-ios-telephone-outline"></i>
                 <h3>Phone Number</h3>
-              <p><a href="tel:+155895548855">+212 6 72 07 91 41</a></p>
+              <p><a href="#">+212 6 72 07 91 41</a></p>
 
   
               </div>
