--- a/pages/event/committees.html
+++ b/pages/event/committees.html
@@ -126,7 +126,7 @@
 				<td>Hassan II University, Morocco</td>
 			</tr>
 			<tr>
-				<td>Leghris Cherkaoui</td>
+				<td>Cherkaoui Leghris</td>
 				<td>Hassan II University, Morocco</td>
 			</tr>
             <tr>
@@ -190,9 +190,13 @@
 				<td>Abdellah Idrissi</td>
 				<td>Mohammed V University, Morocco </td>
 			</tr>
+      <tr>
+        <td>Ahmed Drissi El Maliani</td>
+        <td>Sidi Mohamed Ben Abdellah University, Morocco </td>
+      </tr>
             <tr>
 				<td>Amine Mouafi</td>
-				<td> Sidi Mohammed Ben Abdellah University, Morocco</td>
+				<td> Sidi Mohamed Ben Abdellah University, Morocco</td>
 			</tr>
 			<tr>
 				<td>Ayoub Karine </td>
@@ -202,6 +206,11 @@
 				<td>Ayoub Tamim</td>
 				<td>ISPM Agadir, Morocco </td>
 			</tr>
+
+      <tr>
+        <td>Cherkaoui Leghris</td>
+        <td>Hassan II University, Morocco </td>
+      </tr>
 
 <tr>
 				<td>Chouaib Moujahdi</td>
@@ -236,10 +245,14 @@
 				<td> Mohammed V University, Morocco 
 </td>
 			</tr>
-            <tr>
-				<td>Leghris Cherkaoui</td>
-				<td>Hassan II University, Morocco </td>
-			</tr>
+      <tr>
+        <td>Khalid Minaoui</td>
+        <td> Mohammed V University, Morocco </td>
+      </tr>    
+      <tr>
+        <td>Mohammed El Hassouni</td>
+        <td> Mohammed V University, Morocco</td>
+      </tr>  
 <tr>
 				<td>Mohamed Nabil Saidi</td>
 				<td> INSEA, Morocco</td>
@@ -273,9 +286,13 @@
 				<td>Ibn Tofail University, Morocco </td>
 			</tr>
 <tr>
-				<td>Yann ben maissa</td>
+				<td>Yann Ben Maissa</td>
 				<td>INPT, Morocco </td>
 			</tr>
+<tr>
+        <td>Yassine El Amrani</td>
+        <td>Ensa Tetouan , Morocco </td>
+      </tr>      
 			<tr>
 				<td>Younes Kabbadj </td>
 				<td>Ibn Zohr University, Morocco </td>
