--- a/pages/event/keynotes.html
+++ b/pages/event/keynotes.html
@@ -97,7 +97,12 @@
           <div class="section-header">
             <h2>Keynotes</h2>
               <p>We will be annoucing the Keynotes very soon</p>
-              <p>Stay tuned!</p>
+            <p>
+              Stay tuned on
+              <a href="https://twitter.com/indabaXmorocco" class="twitter"
+                >Twitter <i class="fa fa-twitter"></i
+              ></a>
+            </p>
             </div> 
           
             
