--- a/pages/event/tutorials.html
+++ b/pages/event/tutorials.html
@@ -95,8 +95,13 @@
         <div class="container wow fadeInUp">
           <div class="section-header">
             <h2> Tutorials</h2>
-              <p>We will be annoucing the tutorials very soon</p>
-              <p>Stay tuned!</p>
+              <p>We will be annoucing the Tutorials very soon</p>
+            <p>
+              Stay tuned on
+              <a href="https://twitter.com/indabaXmorocco" class="twitter"
+                >Twitter <i class="fa fa-twitter"></i
+              ></a>
+            </p>
           </div>
           
           
