--- a/pages/event/Awards.html
+++ b/pages/event/Awards.html
@@ -127,9 +127,15 @@
                     </h3></center>
                   </div>
                   <div class="section-content">
-                    <center><p>
-                      TBA
-                    </p> </center>                 
+                    <center>
+                    <p>We will be annoucing the 3MT award very soon</p>
+            <p>
+              Stay tuned on
+              <a href="https://twitter.com/indabaXmorocco" class="twitter"
+                >Twitter <i class="fa fa-twitter"></i
+              ></a>
+            </p>
+                    </center>                 
                   </div>
                 </div>
               </section>
@@ -143,9 +149,13 @@
                     </h3></center>
                   </div>
                   <div class="section-content">
-                      <center><p>
-                      TBA
-                    </p></center>               
+                      <center><p>We will be annoucing the Data Challenge award very soon</p>
+            <p>
+              Stay tuned on
+              <a href="https://twitter.com/indabaXmorocco" class="twitter"
+                >Twitter <i class="fa fa-twitter"></i
+              ></a>
+            </p></center>               
                   </div>
                 </div>
               </section>
