--- a/pages/registration.html
+++ b/pages/registration.html
@@ -126,7 +126,7 @@
         <div class="container">
 
           <div class="section-header">
-            <h2>Call for 3 Minutes Thesis (3MT)</h2>
+            <h2>Registration</h2>
           </div>
 
           <div class="row">
@@ -155,45 +155,7 @@
                       >
                     </h2>
                   </div>
-                  <div class="section-header">
-                    <center>
-                      <h3>Important dates</h3></center>
-
-                      <div class="tab-content row justify-content-center">
-                        <!-- Schdule Day 1 -->
-                        <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
-                            <div class="row schedule-item">
-                                <div class="col-md-5"><time><h6>March 17, 2019</h6></time></div>
-                                <div class="col-md-7">
-                                    <h6><b>Submission deadline</b></h6>
-                                  <p> </p>
-                                </div>
-                             </div>
-
-                          <div class="row schedule-item">
-                              <div class="col-md-5"><time><h6>March 31, 2019</h6></time></div>
-                              <div class="col-md-7">
-                                  <h6><b>Acceptance notification</b></h6>
-                                <p> </p>
-                              </div>
-                           </div>
-
-                           <div class="row schedule-item">
-                              <div class="col-md-5"><time><h6>April 14, 2019</h6></time></div>
-                              <div class="col-md-7">
-                                <h6><b>Registration</b></h6>
-                                <p> </p>
-                              </div>
-                           </div>
-
-                           <div class="row schedule-item">
-                              <div class="col-md-5"><time><h6>April 29-30, 2019</h6></time></div>
-                              <div class="col-md-7">
-                                  <h6><b>Event</b></h6>
-                                <p> </p>
-                              </div>
-                           </div>
-                  </div>
+                  
                 </div>
               </section>
             </div>
