--- a/pages/registration.html
+++ b/pages/registration.html
@@ -134,7 +134,7 @@
                 <div class="container wow fadeInUp">
                   <div class="section-content">
                       <p>
-                          Registration is open !
+                          Registration will be open soon.
                         </p>
                         <p>
                           Due to limited places, we will review applications then send notifications.
@@ -151,7 +151,7 @@
                       <a
                         href="https://goo.gl/forms/YQxprQZ6lNxahFlg2"
                         class="btn btn-outline-primary btn-lg"
-                        >Submit a Summary</a
+                        >Register</a
                       >
                     </h2>
                   </div>
