--- a/pages/registration.html
+++ b/pages/registration.html
@@ -149,7 +149,7 @@
                   <div class="section-header">
                     <h2>
                       <a
-                        href="https://goo.gl/forms/YQxprQZ6lNxahFlg2"
+                        href="https://docs.google.com/forms/d/e/1FAIpQLSfaPvRcOm0lC7fAGRpIhFJyOw7IcK8siG2RSTpsY-6F7LcRmQ/viewform?usp=pp_url"
                         class="btn btn-outline-primary btn-lg"
                         >Register</a
                       >
