--- a/pages/registration.html
+++ b/pages/registration.html
@@ -134,12 +134,11 @@
                 <div class="container wow fadeInUp">
                   <div class="section-content">
                       <p>
-                          Registration will be open soon.
+                          Registration is open!
                         </p>
                         <p>
-                          Due to limited places, we will review applications then send notifications.
+                          Due to limited places, application will be reviewed and notifications will be sent to participants
                         </p>
-                      
                   </div>
                 </div>
             </div>
@@ -151,11 +150,49 @@
                       <a
                         href="https://docs.google.com/forms/d/e/1FAIpQLSfaPvRcOm0lC7fAGRpIhFJyOw7IcK8siG2RSTpsY-6F7LcRmQ/viewform?usp=pp_url"
                         class="btn btn-outline-primary btn-lg"
-                        >Register</a
+                        >Submit a Summary</a
                       >
                     </h2>
                   </div>
-                  
+                  <div class="section-header">
+                    <center>
+                      <h3>Important dates</h3></center>
+
+                      <div class="tab-content row justify-content-center">
+                        <!-- Schdule Day 1 -->
+                        <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
+                            <div class="row schedule-item">
+                                <div class="col-md-5"><time><h6>March 17, 2019</h6></time></div>
+                                <div class="col-md-7">
+                                    <h6><b>Submission deadline</b></h6>
+                                  <p> </p>
+                                </div>
+                             </div>
+
+                          <div class="row schedule-item">
+                              <div class="col-md-5"><time><h6>March 31, 2019</h6></time></div>
+                              <div class="col-md-7">
+                                  <h6><b>Acceptance notification</b></h6>
+                                <p> </p>
+                              </div>
+                           </div>
+
+                           <div class="row schedule-item">
+                              <div class="col-md-5"><time><h6>April 14, 2019</h6></time></div>
+                              <div class="col-md-7">
+                                <h6><b>Registration</b></h6>
+                                <p> </p>
+                              </div>
+                           </div>
+
+                           <div class="row schedule-item">
+                              <div class="col-md-5"><time><h6>April 29-30, 2019</h6></time></div>
+                              <div class="col-md-7">
+                                  <h6><b>Event</b></h6>
+                                <p> </p>
+                              </div>
+                           </div>
+                  </div>
                 </div>
               </section>
             </div>
