--- a/pages/registration.html
+++ b/pages/registration.html
@@ -8,8 +8,8 @@
     <meta content="" name="description" />
 
     <!-- Favicons -->
-    <link href="../../img/icon.png" rel="icon" />
-    <link href="../../img/iconH.png" rel="apple-touch-icon" />
+    <link href="../img/icon.png" rel="icon" />
+    <link href="../img/iconH.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link
@@ -18,22 +18,22 @@
     />
 
     <!-- Bootstrap CSS File -->
-    <link href="../../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Libraries CSS Files -->
     <link
-      href="../../lib/font-awesome/css/font-awesome.min.css"
+      href="../lib/font-awesome/css/font-awesome.min.css"
       rel="stylesheet"
     />
-    <link href="../../lib/animate/animate.min.css" rel="stylesheet" />
-    <link href="../../lib/venobox/venobox.css" rel="stylesheet" />
+    <link href="../lib/animate/animate.min.css" rel="stylesheet" />
+    <link href="../lib/venobox/venobox.css" rel="stylesheet" />
     <link
-      href="../../lib/owlcarousel/assets/owl.carousel.min.css"
+      href="../lib/owlcarousel/assets/owl.carousel.min.css"
       rel="stylesheet"
     />
 
     <!-- Main Stylesheet File -->
-    <link href="../../css/style.css" rel="stylesheet" />
+    <link href="../css/style.css" rel="stylesheet" />
 
     <!-- =======================================================
     Theme Name: TheEvent
@@ -42,6 +42,7 @@
     License: https://bootstrapmade.com/license/
   ======================================================= -->
   </head>
+
   <body>
     <!--==========================
     Header
@@ -51,16 +52,14 @@
         <div id="logo" class="pull-left">
           <!-- Uncomment below if you prefer to use a text logo -->
           <!-- <h1><a href="#main">C<span>o</span>nf</a></h1>-->
-          <a href="../../index.html" class="scrollto"
-            ><img src="../../img/logo.png" alt="" title=""
+          <a href="../index.html" class="scrollto"
+            ><img src="../img/logo.png" alt="" title=""
           /></a>
         </div>
-
         <nav id="nav-menu-container">
           <ul class="nav-menu">
-            <li><a href="../../index.html">Home</a></li>
-            <li><a href="../participate.html">Why participate</a></li>
-
+            <li><a href="../index.html">Home</a></li>
+            <li class="menu-active"><a href="#">Why participate</a></li>
             <li class="dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -73,19 +72,17 @@
                 Event
               </a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="../event/committees.html"
+                <a class="dropdown-item" href="event/committees.html"
                   >Committees</a
                 >
-                <a class="dropdown-item" href="../event/keynotes.html"
-                  >Keynotes</a
-                >
-                <a class="dropdown-item" href="../event/tutorials.html"
+                <a class="dropdown-item" href="event/keynotes.html">Keynotes</a>
+                <a class="dropdown-item" href="event/tutorials.html"
                   >Tutorials</a
                 >
-                <a class="dropdown-item" href="../event/awards.html">Awards</a>
+                <a class="dropdown-item" href="event/Awards.html">Awards</a>
               </div>
             </li>
-            <li class="dropdown menu-active">
+            <li class="dropdown">
               <a
                 class="nav-link dropdown-toggle"
                 data-toggle="dropdown"
@@ -97,19 +94,23 @@
                 Calls
               </a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="papers.html">Call for papers</a>
-                <a class="dropdown-item active" href="#">Call for 3MT</a>
-                <a class="dropdown-item" href="dataChallenge.html"
+                <a class="dropdown-item" href="calls/papers.html"
+                  >Call for papers</a
+                >
+                <a class="dropdown-item" href="calls/3mt.html">Call for 3MT</a>
+                <a class="dropdown-item" href="calls/dataChallenge.html"
                   >Call for Data challenge</a
                 >
-                <a class="dropdown-item" href="tutorials.html">Call for Tutorials</a>
+                <a class="dropdown-item" href="calls/tutorials.html"
+                  >Call for Tutorials</a
+                >
               </div>
             </li>
-            <li><a href="../program.html">Program</a></li>
-            <li><a href="../registration.html">Registration</a></li>
-            <li><a href="../sponsorship.html">Sponsorship</a></li>
-            <li><a href="../venue.html">Venue</a></li>
-            <li><a href="../contact.html">Contact</a></li>
+            <li><a href="program.html">Program</a></li>
+            <li><a href="registration.html">Registration</a></li>
+            <li><a href="sponsorship.html">Sponsorship</a></li>
+            <li><a href="venue.html">Venue</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
         <!-- #nav-menu-container -->
