--- a/pages/registration.html
+++ b/pages/registration.html
@@ -138,7 +138,7 @@
                           Registration is open!
                         </p>
                         <p>
-                          Due to limited places, application will be reviewed and notifications will be sent to participants
+                          Due to limited places, applications will be reviewed and notifications will be sent to participants
                         </p>
                   </div>
                 </div>
