--- a/pages/registration.html
+++ b/pages/registration.html
@@ -59,7 +59,7 @@
         <nav id="nav-menu-container">
           <ul class="nav-menu">
             <li><a href="../index.html">Home</a></li>
-            <li class="menu-active"><a href="#">Why participate</a></li>
+            <li class="menu-active"><a href="#">Registration</a></li>
             <li class="dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -154,45 +154,6 @@
                         >Submit a Summary</a
                       >
                     </h2>
-                  </div>
-                  <div class="section-header">
-                    <center>
-                      <h3>Important dates</h3></center>
-
-                      <div class="tab-content row justify-content-center">
-                        <!-- Schdule Day 1 -->
-                        <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
-                            <div class="row schedule-item">
-                                <div class="col-md-5"><time><h6>March 17, 2019</h6></time></div>
-                                <div class="col-md-7">
-                                    <h6><b>Submission deadline</b></h6>
-                                  <p> </p>
-                                </div>
-                             </div>
-
-                          <div class="row schedule-item">
-                              <div class="col-md-5"><time><h6>March 31, 2019</h6></time></div>
-                              <div class="col-md-7">
-                                  <h6><b>Acceptance notification</b></h6>
-                                <p> </p>
-                              </div>
-                           </div>
-
-                           <div class="row schedule-item">
-                              <div class="col-md-5"><time><h6>April 14, 2019</h6></time></div>
-                              <div class="col-md-7">
-                                <h6><b>Registration</b></h6>
-                                <p> </p>
-                              </div>
-                           </div>
-
-                           <div class="row schedule-item">
-                              <div class="col-md-5"><time><h6>April 29-30, 2019</h6></time></div>
-                              <div class="col-md-7">
-                                  <h6><b>Event</b></h6>
-                                <p> </p>
-                              </div>
-                           </div>
                   </div>
                 </div>
               </section>
