--- a/pages/registration.html
+++ b/pages/registration.html
@@ -59,7 +59,7 @@
         <nav id="nav-menu-container">
           <ul class="nav-menu">
             <li><a href="../index.html">Home</a></li>
-            <li class="menu-active"><a href="#">Registration</a></li>
+            <li><a href="../participate.html">Why participate</a></li>
             <li class="dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -107,7 +107,7 @@
               </div>
             </li>
             <li><a href="program.html">Program</a></li>
-            <li><a href="registration.html">Registration</a></li>
+            <li  class="menu-active"><a href="registration.html">Registration</a></li>
             <li><a href="sponsorship.html">Sponsorship</a></li>
             <li><a href="venue.html">Venue</a></li>
             <li><a href="contact.html">Contact</a></li>
