--- a/pages/registration.html
+++ b/pages/registration.html
@@ -151,7 +151,7 @@
                       <a
                         href="https://docs.google.com/forms/d/e/1FAIpQLSfaPvRcOm0lC7fAGRpIhFJyOw7IcK8siG2RSTpsY-6F7LcRmQ/viewform?usp=pp_url"
                         class="btn btn-outline-primary btn-lg"
-                        >Submit a Summary</a
+                        >Register</a
                       >
                     </h2>
                   </div>
