--- a/pages/registration.html
+++ b/pages/registration.html
@@ -140,6 +140,14 @@
                         <p>
                           Due to limited places, applications will be reviewed and notifications will be sent to participants
                         </p>
+                        <p>
+                          <iframe id="inlineFrameExample"
+                              title="Inline Frame Example"
+                              width="640"
+                              height="666"
+                              src="https://docs.google.com/forms/d/e/1FAIpQLSfTvDV9H7A7d1IGUde9JD7ELBq6_pNTVE1oideS6-Nrvw3izA/viewform?embedded=true&fbclid=IwAR2sZD0dd0EMjctYm2Imgv26fyvlY1KWkZ-SYyRUh66kzPgMRLah8ZAaNdM">
+                          </iframe> 
+                    </p>
                   </div>
                 </div>
             </div>
