--- a/pages/registration.html
+++ b/pages/registration.html
@@ -144,7 +144,7 @@
                           <iframe id="inlineFrameExample"
                               title="Inline Frame Example"
                               width="640"
-                              height="666"
+                              height="800"
                               src="https://docs.google.com/forms/d/e/1FAIpQLSfTvDV9H7A7d1IGUde9JD7ELBq6_pNTVE1oideS6-Nrvw3izA/viewform?embedded=true&fbclid=IwAR2sZD0dd0EMjctYm2Imgv26fyvlY1KWkZ-SYyRUh66kzPgMRLah8ZAaNdM">
                           </iframe> 
                     </p>
@@ -152,7 +152,7 @@
                 </div>
             </div>
             <div class="col-lg-5">
-              <section id="schedule" class="section-with-bg">
+              <!--<section id="schedule" class="section-with-bg">
                 <div class="container wow fadeInUp">
                   <div class="section-header">
                     <h2>
@@ -164,7 +164,7 @@
                     </h2>
                   </div>
                 </div>
-              </section>
+              </section>-->
             </div>
           </div>
         </div>
