--- a/pages/calls/3mt.html
+++ b/pages/calls/3mt.html
@@ -198,7 +198,8 @@
                         <!-- Schdule Day 1 -->
                         <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
                             <div class="row schedule-item">
-                                <div class="col-md-5"><time><h6>March 17, 2019</h6></time></div>
+                                <div class="col-md-5"><time><h6>February 28, 2019
+</h6></time></div>
                                 <div class="col-md-7">
                                     <h6><b>Submission deadline</b></h6>
                                   <p> </p>
@@ -206,7 +207,7 @@
                              </div>
 
                           <div class="row schedule-item">
-                              <div class="col-md-5"><time><h6>March 31, 2019</h6></time></div>
+                              <div class="col-md-5"><time><h6>March 17, 2019</h6></time></div>
                               <div class="col-md-7">
                                   <h6><b>Acceptance notification</b></h6>
                                 <p> </p>
@@ -214,7 +215,7 @@
                            </div>
 
                            <div class="row schedule-item">
-                              <div class="col-md-5"><time><h6>April 14, 2019</h6></time></div>
+                              <div class="col-md-5"><time><h6>March 31, 2019</h6></time></div>
                               <div class="col-md-7">
                                 <h6><b>Registration</b></h6>
                                 <p> </p>
