--- a/pages/registration.html
+++ b/pages/registration.html
@@ -138,7 +138,8 @@
                           Registration is open!
                         </p>
                         <p>
-                          Due to limited places, applications will be reviewed and notifications will be sent to participants
+                          Due to limited places, priority will be given to partcipants sharing their works (Poster presenters, 3MT participants,
+                          etc...). Answering one of the several calls is adviced to increase your chances in attending the event.
                         </p>
                         <p>
                           <iframe id="inlineFrameExample"
